--- a/index.ipynb
+++ b/index.ipynb
@@ -218,8 +218,8 @@
     }
    ],
    "source": [
-    "email\"art.vandelay@vandelay.co\" # False\n",
-    "\"art.vandelay@vandelay.co\".endswith(.com)"
+    "email = \"art.vandelay@vandelay.co\" # False\n",
+    "email.endswith(.com)"
    ]
   },
   {
