--- a/index.ipynb
+++ b/index.ipynb
@@ -205,15 +205,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-de63f496bb48>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-7-4ef2d232b054>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-de63f496bb48>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    email.endswith(.com)\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-4ef2d232b054>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    email.endwith(.com)\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
